# servus

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  release.yml  rust.yml
admin/: index.html
src/: content.rs  default_site.rs  main.rs  nostr.rs  resource.rs  sass.rs  site.rs  template.rs  theme.rs  utils.rs
themes/blank/: _config.toml  atom.xml  index.md  posts.md  robots.txt  sitemap.xml
themes/blank/_layouts/: base.html  page.html  post.html
themes/blank/_posts/: 2022-12-30-servus.md
themes/default/: style.css
themes/default/_content/pages/: index.md  posts.md
themes/default/_layouts/: base.html  note.html  page.html  post.html
themes/portfolio/: _config.toml  atom.xml  index.md  manifest.webmanifest
themes/portfolio/_layouts/: base.html  page.html  plain_page.html
themes/portfolio/_layouts/includes/: breadcrumbs.html  footer.html  intro.html  navbar.html  portfolio.html
themes/portfolio/en/: about.html  contact.html  index.html
themes/portfolio/ro/: about.html  contact.html  index.html
