[package]
name = "servus"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1", features = ["attributes"] }
base64 = { version = "0.21" }
bitcoin_hashes = { version = "0.12", features = ["serde"] }
chrono = { version = "0", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
femme = "2"
globset = "0.4"
grass = {version = "0.13", default-features = false, features = ["random"]}
http-types = "2"
lazy_static = "1.4"
mime_guess = "2.0.4"
phf = { version = "0.11.2", features = ["macros"] }
pulldown-cmark = "0.11.0"
regex = "1"
secp256k1 = { version = "0.27", features = ["serde", "bitcoin_hashes"] }
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
sha256 = "1.5"
tera = "1"
tide = "0"
tide-acme = "0"
tide-rustls = "0"
tide-tera = "0"
tide-websockets = "0"
tl = "0"
toml = "0"
walkdir = "2"
