[package]
name = "servus"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1", features = ["attributes"] }
base64 = { version = "0.22" }
bitcoin_hashes = { version = "0.15", features = ["serde"] }
bytes = "1.7.2"
chrono = { version = "0", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
femme = "2"
futures-util = "0.3"
git2 = "0.19"
globset = "0.4"
grass = {version = "0.13", default-features = false, features = ["random"]}
http-types = "2"
lazy_static = "1.4"
mime_guess = "2.0"
multer = "3.1"
phf = { version = "0.11", features = ["macros"] }
pulldown-cmark = "0.12"
regex = "1"
secp256k1 = { version = "0.27", features = ["serde", "bitcoin_hashes"] }
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
sha256 = "1.5"
tera = "1"
tide = "0"
tide-acme = "0"
tide-rustls = "0"
tide-tera = "0"
tide-websockets = "0"
tl = "0"
toml = "0"
walkdir = "2"
